Updated - mobile screen responsiveness

--- a/signup.html
+++ b/signup.html
@@ -33,11 +33,11 @@
 
             <div class="name-info">
 
-                <label for="first_name">First name </label>
-                <input type="text" placeholder="Enter your first name" id="first_name"/>
+                <label for="first-name">First name </label>
+                <input type="text" placeholder="Enter your first name" id="first-name"/>
                 
-                <label for="last_name"> Last name</label>
-                <input type="text" placeholder="Enter your last name" id="last_name"/>   
+                <label for="last-name"> Last name</label>
+                <input type="text" placeholder="Enter your last name" id="last-name"/>   
 
             </div>
 
